syntax = "proto3";

package quite.proto;

service ObjectService {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
    rpc FindObject(ObjectRequest) returns (ObjectReply) {}
}

message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message ObjectRequest {
  string object_name = 1;
}

message ObjectReply {
  bool object_found = 1;
  map<string, string> properties = 2;
}
